Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -237,7 +237,7 @@
    },
    "outputs": [],
    "source": [
-    "'vandelay.com'.beginswi # 'www.vandelay.com'"
+    "'vandelay.com'.beginswith(\"www.\") # 'www.vandelay.com'"
    ]
   },
   {
