Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -232,12 +232,11 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true,
     "scrolled": true
    },
    "outputs": [],
    "source": [
-    "'vandelay.com'.beginswith(\"www.\") # 'www.vandelay.com'"
+    "'vandelay.com'.startswith(\"www.\") # 'www.vandelay.com'"
    ]
   },
   {
