--- a/index.ipynb
+++ b/index.ipynb
@@ -230,13 +230,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "'vandelay.com'.startswith(\"www.\") # 'www.vandelay.com'"
+    "'ww''vandelay.com' # 'www.vandelay.com'"
    ]
   },
   {
